feat: adding new api docs
