# business/report/controller/http/report_handler.go
@@ -34,21 +34,46 @@ func (r *ReportHandler) Route(e *echo.Echo) {
 	e.PUT("/akun/laporan/:id", r.UpdateReportByID)
 	e.DELETE("/akun/laporan/:id", r.DeleteReportByID)
 	e.GET("/cek/statistik", r.Statistic, r.RJwt.UserJwtMiddleware())
-	e.GET("/cek/rekening/:number", r.detectBank)
-	e.GET("/cek/phone/:number", r.detectPhone)
-	e.POST("/admin/laporan/validasi/:id", r.ReportValidating)
+	e.GET("/cek/rekening/:number", r.DetectBank)
+	e.GET("/cek/phone/:number", r.DetectPhone)
+	e.PUT("/admin/laporan/validasi/:id", r.ReportValidating)
 	e.GET("/admin/laporan/all", r.GetAllReport, r.RJwt.AdminJwtMiddleware())
 }
 
+// GetReportHistoryByUser godoc
+// @Summary      Get Report History
+// @Description  Retrieve list of all users report history
+// @Tags         reports
+// @Accept       json
+// @Produce      json
+// @Success      200	{object}	response.ApiResponse
+// @Failure      404	{object}	response.ApiResponse
+// @Failure      500	{object}	response.ApiResponse
+// @Router       /akun/laporan/riwayat [get]
 func (r *ReportHandler) GetReportHistoryByUser(c echo.Context) error {
 
 	listReport, err := r.RUseCase.ReadUserReports()
 	if err != nil {
-		return c.JSON(GetStatusCode(err), ResponseError{Message: err.Error()})
+		return c.JSON(GetStatusCode(err), response.ApiResponse{
+			Message: err.Error(),
+		})
 	}
-	return c.JSON(http.StatusOK, listReport)
+	return c.JSON(http.StatusOK, response.ApiResponse{
+		Message: "Success",
+		Data:    listReport,
+	})
 }
 
+// SaveBankReport godoc
+// @Summary      Save Bank Report
+// @Description  Create report for the bank account number that commits fraud
+// @Tags         reports
+// @Accept       json
+// @Produce      json
+// @Success      200	{object}	response.ApiResponse
+// @Failure      404	{object}	response.ApiResponse
+// @Failure      500	{object}	response.ApiResponse
+// @Router       /akun/laporan/rekening [post]
 func (r *ReportHandler) SaveBankReport(c echo.Context) (err error) {
 	var report model.Report
 	err = c.Bind(&report)
@@ -60,11 +85,26 @@ func (r *ReportHandler) SaveBankReport(c echo.Context) (err error) {
 	err = r.RUseCase.SaveRequest(report)
 	fmt.Println("anjay")
 	if err != nil {
-		return c.JSON(GetStatusCode(err), ResponseError{Message: err.Error()})
+		return c.JSON(GetStatusCode(err), response.ApiResponse{
+			Message: err.Error(),
+		})
 	}
-	return c.JSON(http.StatusCreated, report)
+	return c.JSON(http.StatusCreated, response.ApiResponse{
+		Message: "Success",
+		Data:    report,
+	})
 }
 
+// SavePhoneReport godoc
+// @Summary      Save Phone Report
+// @Description  Create report for the phone number that commits fraud
+// @Tags         reports
+// @Accept       json
+// @Produce      json
+// @Success      200	{object}	response.ApiResponse
+// @Failure      404	{object}	response.ApiResponse
+// @Failure      500	{object}	response.ApiResponse
+// @Router       /akun/laporan/phone [post]
 func (r *ReportHandler) SavePhoneReport(c echo.Context) (err error) {
 	var report model.Report
 	err = c.Bind(&report)
@@ -75,11 +115,27 @@ func (r *ReportHandler) SavePhoneReport(c echo.Context) (err error) {
 
 	err = r.RUseCase.SaveRequest(report)
 	if err != nil {
-		return c.JSON(GetStatusCode(err), ResponseError{Message: err.Error()})
+		return c.JSON(GetStatusCode(err), response.ApiResponse{
+			Message: err.Error(),
+		})
 	}
-	return c.JSON(http.StatusCreated, report)
+	return c.JSON(http.StatusCreated, response.ApiResponse{
+		Message: "Success",
+		Data:    report,
+	})
 }
 
+// UpdateReportByID godoc
+// @Summary      Update report
+// @Description  Edit report by id
+// @Tags         reports
+// @Accept       json
+// @Produce      json
+// @Param        id   path      int  true  "User ID"
+// @Success      200	{object}	response.ApiResponse
+// @Failure      404	{object}	response.ApiResponse
+// @Failure      500	{object}	response.ApiResponse
+// @Router     	 /akun/laporan/:id [put]
 func (r *ReportHandler) UpdateReportByID(c echo.Context) error {
 	var report model.Report
 	c.Bind(&report)
@@ -88,31 +144,59 @@ func (r *ReportHandler) UpdateReportByID(c echo.Context) error {
 
 	report, err := r.RUseCase.EditReport(id, report)
 	if err != nil {
-		return c.JSON(GetStatusCode(err), ResponseError{Message: err.Error()})
+		return c.JSON(GetStatusCode(err), response.ApiResponse{
+			Message: err.Error(),
+		})
 	}
-	return c.JSON(http.StatusOK, report)
+	return c.JSON(http.StatusOK, response.ApiResponse{
+		Message: "Success",
+		Data:    report,
+	})
 }
 
+// DeleteReportByID godoc
+// @Summary      Delete report
+// @Description  Delete report by id
+// @Tags         reports
+// @Accept       json
+// @Produce      json
+// @Param        id   path      int  true  "User ID"
+// @Success      200	{object}	response.ApiResponse
+// @Failure      404	{object}	response.ApiResponse
+// @Failure      500	{object}	response.ApiResponse
+// @Router     	 /akun/laporan/:id [delete]
 func (r *ReportHandler) DeleteReportByID(c echo.Context) error {
 
 	id, _ := strconv.Atoi(c.Param("id"))
 
 	err := r.RUseCase.DeleteReport(id)
 	if err != nil {
-		return c.JSON(GetStatusCode(err), ResponseError{
+		return c.JSON(GetStatusCode(err), response.ApiResponse{
 			Message: err.Error(),
 		})
 	}
 
-	return c.JSON(http.StatusOK, map[string]interface{}{
-		"status": "delete success",
+	return c.JSON(http.StatusOK, response.ApiResponse{
+		Message: "delete success",
 	})
 }
 
+// Statistic godoc
+// @Summary      statistics
+// @Description  Show statistics about bank account and phone report
+// @Tags         detect
+// @Accept       json
+// @Produce      json
+// @Success      200	{object}	response.ApiResponse
+// @Failure      404	{object}	response.ApiResponse
+// @Failure      500	{object}	response.ApiResponse
+// @Router     	 /cek/statistik [get]
 func (r *ReportHandler) Statistic(c echo.Context) error {
 	totalReport, totalBank, totalPhone, totalCost, err := r.RUseCase.Statistic()
 	if err != nil {
-		return c.JSON(GetStatusCode(err), ResponseError{Message: err.Error()})
+		return c.JSON(GetStatusCode(err), response.ApiResponse{
+			Message: err.Error(),
+		})
 	}
 	return c.JSON(http.StatusOK, map[string]interface{}{
 		"totalReport": totalReport,
@@ -122,7 +206,18 @@ func (r *ReportHandler) Statistic(c echo.Context) error {
 	})
 }
 
-func (r *ReportHandler) detectBank(c echo.Context) error {
+// DetectBank godoc
+// @Summary      Detect bank
+// @Description  Detect bank account who commits fraud
+// @Tags         detect
+// @Accept       json
+// @Produce      json
+// @Param        id   path      int  true  "number"
+// @Success      200	{object}	response.ApiResponse
+// @Failure      404	{object}	response.ApiResponse
+// @Failure      500	{object}	response.ApiResponse
+// @Router     	 /cek/rekening/:number [get]
+func (r *ReportHandler) DetectBank(c echo.Context) error {
 	number := c.Param("number")
 	bank, err := r.RUseCase.DetectBank(number)
 	if err != nil {
@@ -132,13 +227,20 @@ func (r *ReportHandler) detectBank(c echo.Context) error {
 	return c.JSON(http.StatusOK, map[string]interface{}{
 		"terlapor": bank,
 	})
-	//return func {
-	//
-	//}
-
 }
 
-func (r *ReportHandler) detectPhone(c echo.Context) error {
+// DetectPhone godoc
+// @Summary      Detect phone
+// @Description  Detect phone number who commits fraud
+// @Tags         detect
+// @Accept       json
+// @Produce      json
+// @Param        id   path      int  true  "number"
+// @Success      200	{object}	response.ApiResponse
+// @Failure      404	{object}	response.ApiResponse
+// @Failure      500	{object}	response.ApiResponse
+// @Router     	 /cek/phone/:number [get]
+func (r *ReportHandler) DetectPhone(c echo.Context) error {
 	number := c.Param("number")
 	phone, err := r.RUseCase.DetectPhone(number)
 	if err != nil {
@@ -150,6 +252,17 @@ func (r *ReportHandler) detectPhone(c echo.Context) error {
 	})
 }
 
+// ReportValidating godoc
+// @Summary      Validate report
+// @Description  Validate user report (bank account or phone number) by report id
+// @Tags         reports
+// @Accept       json
+// @Produce      json
+// @Param        id   path      int  true  "id"
+// @Success      200	{object}	response.ApiResponse
+// @Failure      404	{object}	response.ApiResponse
+// @Failure      500	{object}	response.ApiResponse
+// @Router       /admin/laporan/validasi/:id [put]
 func (r *ReportHandler) ReportValidating(c echo.Context) error {
 	id, _ := strconv.Atoi(c.Param("id"))
 	err := r.RUseCase.Validate(id)
@@ -162,14 +275,24 @@ func (r *ReportHandler) ReportValidating(c echo.Context) error {
 	})
 }
 
+// GetAllReport godoc
+// @Summary      Get all report
+// @Description  Admin can Get all report from all users
+// @Tags         reports
+// @Accept       json
+// @Produce      json
+// @Success      200	{object}	response.ApiResponse
+// @Failure      404	{object}	response.ApiResponse
+// @Failure      500	{object}	response.ApiResponse
+// @Router       /admin/laporan/all [get]
 func (r *ReportHandler) GetAllReport(c echo.Context) error {
 	listReport, err := r.RUseCase.GetAllReport()
 	if err != nil {
 		return c.JSON(GetStatusCode(err), ResponseError{Message: err.Error()})
 	}
 	return c.JSON(http.StatusOK, response.ApiResponse{
-		Status: "mantab",
-		Data:   listReport,
+		Message: "success",
+		Data:    listReport,
 	})
 }
 
